test(booking): cross-owner 404 + robust slot seeding for approve/decline-from-email
Add two cross-owner security tests (crossOwnerApproveIs404, crossOwnerDeclineIs404):
seed a PENDING booking owned by a second AppUser ("ownerb-approval") via direct
Booking.persist (pattern from CrossOwnerIsolationTest.seedOwnerB), then assert the
admin session gets 404 on both GET /me/bookings/{id}/approve and /decline routes,
proving requireOwnedBooking rejects foreign-owner bookings on the new GET endpoints.

Also guard newPendingBooking()'s slot fetch: capture the list, assertFalse with
a descriptive message, then take index 0 — replaces the silent getFirst() that would
throw NoSuchElementException on an empty list.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>